# techchallenge

./: CMakeLists.txt  README.md  challenge.cpp  challenge.h  collisionDetector.cpp  collisionDetector.h  main.cpp  pointdistance.h  test.cpp  test_detector.cpp  test_vehicle.cpp  vehicle.cpp  vehicle.h
